--- a/deployments/templates/configmap-servers.yaml
+++ b/deployments/templates/configmap-servers.yaml
@@ -23,7 +23,7 @@ data:
           "Port": 5432,
           "MaintenanceDB": "tenant2db",
           "Username": "tenant2_reader",
-          "Password": "reader_password2",
+          "Password": "reader_password",
           "SSLMode": "prefer"
         }
       }
